--- a/ameas_web/design/template.htm
+++ b/ameas_web/design/template.htm
@@ -10,7 +10,7 @@
 </style>
                  
 <script type="text/javascript" src="$BASEHREFlib/d3/d3.min.js"></script> 
-<script type="text/javascript" src="$BASEHREFlib/jquery/jquery-2.1.4.js"></script>
+<script type="text/javascript" src="$BASEHREFlib/jquery/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="$BASEHREFlib/jquery-datetimepicker/jquery.datetimepicker.min.js"></script>    
 <script type="text/javascript" src="$BASEHREFshowPlot.js"></script> 
 </head>               
