--- a/ameas_web/design/template.htm
+++ b/ameas_web/design/template.htm
@@ -11,7 +11,9 @@
 
         <script type="text/javascript" src="$BASEHREFlib/d3/d3.min.js"></script> 
         <script type="text/javascript" src="$BASEHREFlib/jquery/jquery-2.1.4.min.js"></script>
-        <script type="text/javascript" src="$BASEHREFlib/jquery-datetimepicker/jquery.datetimepicker.full.min.js"></script>    
+        <script type="text/javascript" src="$BASEHREFlib/jquery-datetimepicker/jquery.datetimepicker.full.min.js"></script>   
+        <script type="text/javascript" src="$BASEHREFjs/sensordata.js"></script>  
+        <script type="text/javascript" src="$BASEHREFjs/sensordataset.js"></script>  
         <script type="text/javascript" src="$BASEHREFshowPlot.js"></script> 
     </head>               
     <body> 
