--- a/ameas_web/design/template.htm
+++ b/ameas_web/design/template.htm
@@ -14,6 +14,7 @@
         <script type="text/javascript" src="$BASEHREFlib/jquery-datetimepicker/jquery.datetimepicker.full.min.js"></script>   
         <script type="text/javascript" src="$BASEHREFjs/sensordata.js"></script>  
         <script type="text/javascript" src="$BASEHREFjs/sensordataset.js"></script>  
+        <script type="text/javascript" src="$BASEHREFjs/plot.js"></script>  
         <script type="text/javascript" src="$BASEHREFshowPlot.js"></script> 
     </head>               
     <body> 
